--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.androidhive.nec">
+    package="com.nec.staffApp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -12,38 +12,36 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.nec.staffApp.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/nec_alumni"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.nec.staffApp.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ScanActivity"
+            android:name="com.nec.staffApp.ScanActivity"
             android:label="@string/lbl_scan_activity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TicketResultActivity"
+            android:name="com.nec.staffApp.TicketResultActivity"
             android:label="@string/title_activity_ticket"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Results" />
-        <activity android:name=".Main2Activity"></activity>
-        <activity android:name=".Listall" />
-        <activity android:name=".Main3Activity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name="com.nec.staffApp.Results" />
+        <activity android:name="com.nec.staffApp.Main2Activity"></activity>
+        <activity android:name="com.nec.staffApp.Listall" />
+        <activity android:name="com.nec.staffApp.Main3Activity"></activity>
+        <activity android:name="com.nec.staffApp.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main4Activity"></activity>
+        <activity android:name="com.nec.staffApp.Main4Activity"></activity>
     </application>
 
 </manifest>
