--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.jakewharton:butterknife:8.1.0'
+    testImplementation 'com.jakewharton:butterknife:8.1.0'
+    implementation "com.android.support:recyclerview-v7:28.0.0-alpha1"
+    implementation "com.android.support:recyclerview-selection:28.0.0-alpha1"
+    implementation "com.android.support:cardview-v7:28.0.0-alpha1"
 }
